# url_shortener

./: .gitignore
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
url_shortener/: Cargo.toml  urls.db-shm  urls.db-wal
url_shortener/migrations/: 20250807052843_create_urls_table.sql
url_shortener/src/: database.rs  handlers.rs  main.rs  models.rs  routes.rs
